src/components/Tilegram/TilegramHex/styles.scss
@import '../../../constants.scss';
.root {
  --allocation-d: var(--Democrat-Called);
  --allocation-e: var(--Republican-Likely);
  --allocation-n: white;
  --allocation-r: var(--Republican-Called);
  --allocation-s: var(--Democrat-Likely);
  --allocation-u: var(--De-emphasis);
}
.hex {
  transition: fill 1s, stroke 1s, opacity 1s, scale 1s;
  stroke: transparent;
  fill: var(--to);
  //  Make the hexes slightly larger so they fill the gaps a little more
  scale: 1.03;
  @media (max-width: 700px) {
    scale: 1.05;
  }
}
.hex-borders {
  stroke: rgba(153, 153, 153, 0.5) !important;
}
.hex-flipping {
  animation: flip 1s;
}
.hex-telegraph-flipping {
  animation: telegraphFlip 2s;
}

@keyframes flip {
  0% {
    fill: var(--from);
  }
  20% {
    filter: none;
  }
  49.999% {
    fill: var(--from);
  }
  50% {
    transform: scaleX(0.02);
    filter: brightness(200%);
  }
  75.001% {
    fill: var(--to);
  }
  80% {
    filter: none;
  }
}

@keyframes telegraphFlip {
  0% {
    fill: var(--from);
  }
  2% {
    filter: saturate(10%) brightness(120%);
  }
  50% {
    transform: scaleX(1);
  }
  74.999% {
    filter: saturate(10%) brightness(120%);
    fill: var(--from);
  }
  75% {
    transform: scaleX(0.02);
  }
  75.001% {
    filter: brightness(120%);
    fill: var(--to);
  }
  100% {
    filter: none;
  }
}

.defocused {
  opacity: 0.08 !important;
  scale: 1 !important;
}

.defocusedgrey {
  fill: #ebebeb;
  --allocation-n: rgb(74, 74, 74);
}

